// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elevation ElevationFlat should match previous snapshot 1`] = `
<div
  className="sc-bdfBwQ iPUPAe"
/>
`;

exports[`Elevation ElevationFlat should match previous snapshot 2`] = `
<div
  className="sc-bdfBwQ iGMIMo"
/>
`;

exports[`Elevation ElevationFlat should match previous snapshot 3`] = `
<div
  className="sc-bdfBwQ caSwhA"
/>
`;

exports[`Elevation ElevationFlat should match previous snapshot 4`] = `
<div
  className="sc-bdfBwQ dfJzDY"
/>
`;

exports[`Elevation ElevationFlat should match previous snapshot 5`] = `
<div
  className="sc-bdfBwQ bXgAlQ"
/>
`;

exports[`Elevation ElevationFlat should match previous snapshot 6`] = `
<div
  className="sc-bdfBwQ ddICgU"
/>
`;
